cluster/lubelogger/deployment-lubelogger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubelogger-deployment
  namespace: lubelogger
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lubelogger
  template:
    metadata:
      labels:
        app: lubelogger
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: LC_ALL
              value: en_US
            - name: LANG
              value: en_US
            - name: MailConfig__EmailFrom
              value: "lubelogger@nvaughn.email"
            - name: MailConfig__Port
              value: "587"
            - name: OpenIDConfig__Name
              value: "Authentik"
            - name: OpenIDConfig__AuthURL
              value: "https://authentik.nathanv.app/application/o/authorize/"
            - name: OpenIDConfig__TokenURL
              value: "https://authentik.nathanv.app/application/o/token/"
            - name: OpenIDConfig__RedirectURL
              value: "https://lubelogger.nathanv.app/Login/RemoteAuth"
            - name: OpenIDConfig__Scope
              value: "openid email"
            - name: OpenIDConfig__ValidateState
              value: "false"
            - name: OpenIDConfig__UsePKCE
              value: "false"
            - name: OpenIDConfig__DisableRegularLogin
              value: "true"
            - name: OpenIDConfig__LogOutURL
              value: "https://authentik.nathanv.app/application/o/lubelogger/end-session/"
            # this if off bv default
            - name: EnableAuth
              value: "true"
            # https://stackoverflow.com/a/78052455/9944427
            - name: DOTNET_USE_POLLING_FILE_WATCHER
              value: "1"
          image: cr.nathanv.app/ghcr.io/hargata/lubelogger:v1.7.3
          name: lubelogger
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /App/data
              name: data-vol
            - mountPath: /root/.aspnet/DataProtection-Keys
              name: keys-vol
      volumes:
        - name: data-vol
          persistentVolumeClaim:
            claimName: lubelogger-pvc-data
        - name: keys-vol
          persistentVolumeClaim:
            claimName: lubelogger-pvc-keys
