cluster/lubelogger/service-lubelogger.yaml
apiVersion: v1
kind: Service
metadata:
    name: lubelogger-service
    namespace: lubelogger
spec:
    type: ClusterIP
    selector:
        app: lubelogger
    ports:
      - port: 8080
        protocol: TCP
