cluster/lubelogger/service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelogger-postgresql-service
  namespace: lubelogger
spec:
  type: ClusterIP
  selector:
    app: lubelogger-postgresql
  ports:
    - port: 5432
      protocol: TCP
